fix(retry): enhance retry logic with annotation-based control
- Add support for @Retry annotation at method and class levels
- Implement exception filtering with retryOn, abortOn, and retryOnAnyException
- Introduce configurable delay with exponential backoff before retries
- Log retry attempts with exception messages and delay info
- Reset retry count appropriately on non-retryable exceptions

fix(threadlocal): update thread ID retrieval to use threadId()

- Replace deprecated getId() with threadId() for Thread identification
- Update thread ID usage in tracking, cleanup, and info retrieval methods

style(listener): organize imports in TestListener class

- Group and reorder imports for better readability in TestListener.java

fix(assertions): narrow catch to JsonProcessingException in JSON parsing

- Catch specific JsonProcessingException instead of Throwable in JSON root parsing method
- Improve error handling clarity in Assertions.java